--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "intro.js": "^7.2.0",
+    "intro.js-react": "^1.0.0",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
