--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "zod": "latest"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^22",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
