--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "react-dom": "^19",
     "react-dropzone": "latest",
     "react-hook-form": "latest",
+    "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "latest",
+    "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "latest",
