Initial commit: Multi-Agent Construction AI Chat with real-time, team, analytics, and agent collaboration

--- a/package.json
+++ b/package.json
@@ -65,16 +65,21 @@
     "react-markdown": "latest",
     "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "latest",
+    "recharts": "^2.8.0",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest"
+    "zod": "latest",
+    "zustand": "^5.0.5",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.7.0",
+    "xlsx": "^0.18.5",
+    "formidable": "^3.5.0"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
-    "@types/node": "^22",
+    "@types/node": "^20.11.30",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "postcss": "^8.5",
