--- a/package.json
+++ b/package.json
@@ -48,13 +48,16 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "emoji-mart": "^5.6.0",
+    "formidable": "^3.5.0",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.7.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "pdf-parse": "^1.1.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
@@ -70,16 +73,15 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "latest",
-    "zustand": "^5.0.5",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.7.0",
     "xlsx": "^0.18.5",
-    "formidable": "^3.5.0"
+    "zod": "latest",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/next": "^9.0.0",
     "@types/node": "^20.11.30",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "postcss": "^8.5",
