--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "input-otp": "1.4.1",
     "intro.js": "^7.2.0",
     "intro.js-react": "^1.0.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.7.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "papaparse": "^5.5.3",
     "pdf-parse": "^1.1.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
@@ -81,6 +83,7 @@
     "@types/formidable": "^3.4.5",
     "@types/next": "^9.0.0",
     "@types/node": "^20.11.30",
+    "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
