--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "papaparse": "^5.5.3",
     "pdf-parse": "^1.1.1",
     "react": "^19",
+    "react-chat-elements": "^12.0.18",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-dropzone": "latest",
